; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mpr/extr_mpr_config.c_mpr_config_get_volume_wwid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mpr/extr_mpr_config.c_mpr_config_get_volume_wwid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpr_softc = type { i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i64 }

@MPI2_RAID_VOLUME_PGAD_FORM_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mpr_config_get_volume_wwid(%struct.mpr_softc* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mpr_softc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_5__, align 8
  store %struct.mpr_softc* %0, %struct.mpr_softc** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  store i32 0, i32* %10, align 4
  %11 = load %struct.mpr_softc*, %struct.mpr_softc** %5, align 8
  %12 = load i32, i32* @MPI2_RAID_VOLUME_PGAD_FORM_HANDLE, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @mpr_config_get_raid_volume_pg1(%struct.mpr_softc* %11, i32* %8, %struct.TYPE_5__* %9, i32 %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %28, label %16

16:                                               ; preds = %3
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = trunc i64 %19 to i32
  %21 = shl i32 %20, 32
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = or i32 %21, %24
  %26 = call i32 @le64toh(i32 %25)
  %27 = load i32*, i32** %7, align 8
  store i32 %26, i32* %27, align 4
  store i32 0, i32* %4, align 4
  br label %29

28:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %16
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @mpr_config_get_raid_volume_pg1(%struct.mpr_softc*, i32*, %struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @le64toh(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
